--- a/EaseChat_2.0/EaseChat_2.0/登录注册/RegisterViewController.xib
+++ b/EaseChat_2.0/EaseChat_2.0/登录注册/RegisterViewController.xib
@@ -58,10 +58,10 @@
                     </connections>
                 </button>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="头像.png" translatesAutoresizingMaskIntoConstraints="NO" id="jdq-py-yfO">
-                    <rect key="frame" x="143" y="80" width="128" height="128"/>
+                    <rect key="frame" x="138" y="80" width="138" height="138"/>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="jdq-py-yfO" secondAttribute="height" multiplier="120:120" id="ENS-h9-QeY"/>
+                        <constraint firstAttribute="width" secondItem="jdq-py-yfO" secondAttribute="height" multiplier="1:1" id="BgT-Ln-IhK"/>
                     </constraints>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="v5J-8M-UIB" appends="YES" id="uLX-jx-P5z"/>
@@ -70,19 +70,20 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="jdq-py-yfO" firstAttribute="width" secondItem="Ucc-aA-HyT" secondAttribute="width" multiplier="1/3" id="00B-SD-J0K"/>
                 <constraint firstItem="j5V-3c-cIh" firstAttribute="width" secondItem="Ucc-aA-HyT" secondAttribute="width" multiplier="3/5" id="5ie-aw-wjy"/>
                 <constraint firstItem="j5V-3c-cIh" firstAttribute="centerX" secondItem="Ucc-aA-HyT" secondAttribute="centerX" id="EFl-te-2dn"/>
                 <constraint firstItem="JkT-9v-Nzw" firstAttribute="centerX" secondItem="Ucc-aA-HyT" secondAttribute="centerX" id="H3S-RA-1jV"/>
                 <constraint firstItem="zpC-fd-cnY" firstAttribute="top" secondItem="j5V-3c-cIh" secondAttribute="bottom" constant="70" id="Lsr-di-JA0"/>
                 <constraint firstItem="zpC-fd-cnY" firstAttribute="width" secondItem="Ucc-aA-HyT" secondAttribute="width" multiplier="2/5" id="MvZ-2s-Zyi"/>
                 <constraint firstItem="Ucc-aA-HyT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="PR5-h9-wpj"/>
-                <constraint firstItem="JkT-9v-Nzw" firstAttribute="top" secondItem="jdq-py-yfO" secondAttribute="bottom" constant="45" id="TRN-Zx-KD0"/>
-                <constraint firstItem="jdq-py-yfO" firstAttribute="centerX" secondItem="Ucc-aA-HyT" secondAttribute="centerX" id="VhY-n3-Mev"/>
+                <constraint firstItem="jdq-py-yfO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="Uui-mM-t2q"/>
                 <constraint firstAttribute="bottom" secondItem="Ucc-aA-HyT" secondAttribute="bottom" id="W7u-U9-nLO"/>
                 <constraint firstItem="BRt-0z-hRN" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="30" id="WkJ-sa-Y2A"/>
-                <constraint firstItem="jdq-py-yfO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="c8F-Bh-twt"/>
+                <constraint firstItem="JkT-9v-Nzw" firstAttribute="top" secondItem="jdq-py-yfO" secondAttribute="bottom" constant="35" id="caL-Vs-dQ8"/>
                 <constraint firstItem="j5V-3c-cIh" firstAttribute="top" secondItem="JkT-9v-Nzw" secondAttribute="bottom" constant="55" id="fK6-Qm-Ege"/>
                 <constraint firstItem="Ucc-aA-HyT" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="h6A-fZ-CJX"/>
+                <constraint firstItem="jdq-py-yfO" firstAttribute="centerX" secondItem="Ucc-aA-HyT" secondAttribute="centerX" id="jhw-Y4-S3x"/>
                 <constraint firstItem="zpC-fd-cnY" firstAttribute="centerX" secondItem="Ucc-aA-HyT" secondAttribute="centerX" id="pCC-0n-ny2"/>
                 <constraint firstAttribute="trailing" secondItem="Ucc-aA-HyT" secondAttribute="trailing" id="pLr-Q4-xJh"/>
                 <constraint firstItem="JkT-9v-Nzw" firstAttribute="width" secondItem="Ucc-aA-HyT" secondAttribute="width" multiplier="3/5" id="tcA-lF-9zh"/>
